Completed UI of Delete Alert

--- a/app/javascript/stylesheets/components/_notes.scss
+++ b/app/javascript/stylesheets/components/_notes.scss
@@ -5,3 +5,8 @@
 .notes-font {
   font-family: 'SF Pro Text';
 }
+
+.delete-alert button:first-child {
+  color: #fff !important;
+  background-color: #2f3941 !important;
+}
