--- a/app/javascript/stylesheets/components/_notes.scss
+++ b/app/javascript/stylesheets/components/_notes.scss
@@ -1,8 +1,8 @@
-.notes-font {
-  font-family: 'SF Pro Text';
+.notes-card {
+  border-color: #d8dcde;
+  box-shadow: 0px 1px 4px -1px rgba(28, 48, 74, 0.12);
 }
 
-.delete-alert button:first-child {
-  color: #fff !important;
-  background-color: #2f3941 !important;
+.w-title{
+  width: 58.1rem !important;
 }
